--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/cdnjs/new-website",
   "dependencies": {
     "body-parser": "^1.0.1",
+    "compression": "^1.0.2",
     "express": "^4.0.0",
     "html-linkify": "^1.1.0",
     "lodash": "^2.4.1",
