--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^2.4.1",
     "mongodb": "^1.4.3",
     "mustache": "^0.8.1",
+    "node-hipchat": "^0.4.5",
     "superagent": "^0.17.0",
     "twit": "^1.1.14",
     "urlize": "^0.1.2",
