--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mustache": "^0.8.1",
     "node-hipchat": "^0.4.5",
     "superagent": "^0.17.0",
+    "timeago": "^0.1.0",
     "twit": "^1.1.14",
     "urlize": "^0.1.2",
     "userapp": "^0.2.3"
