--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "reindex": "node reindex.js"
   },
   "repository": {
     "type": "git",
@@ -32,5 +33,8 @@
     "twit": "^1.1",
     "urlize": "^0.1.2",
     "userapp": "^0.2.3"
+  },
+  "devDependencies": {
+    "algolia-search": "^1.7.0"
   }
 }
