--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/cdnjs/new-website",
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.5",
     "compression": "^1.0",
     "cookie-parser": "^1.0.1",
     "express": "^4.7",
+    "github": "^0.2.3",
     "html-linkify": "^1.2",
     "lodash": "^2.4.1",
     "mongodb": "^1.4",
