--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/cdnjs/new-website",
   "dependencies": {
+    "algolia-search": "^1.7.0",
     "async": "^0.9.0",
     "body-parser": "^1.5",
     "compression": "^1.0",
