--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "url": "https://github.com/cdnjs/new-website/issues"
   },
   "homepage": "https://github.com/cdnjs/new-website",
+  "engines": {
+    "node": "0.10.x"
+  },
   "dependencies": {
     "algolia-search": "^1.7.0",
     "async": "^0.9.0",
