--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "node": "0.10.x"
   },
   "dependencies": {
-    "algolia-search": "^1.8.3",
+    "algoliasearch": "^3.2.1",
     "async": "^0.9.0",
     "body-parser": "^1.5",
     "compression": "^1.0",
