Add concurrency to the server for heroku auto scaling

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongodb": "^2.0",
     "mustache": "^2.0",
     "newrelic": "^1.19.1",
+    "throng": "^1.0.0",
     "timeago": "^0.2",
     "twit": "^1.1",
     "urlize": "^0.2",
