--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "algoliasearch": "^3.2",
     "async": "^1.0.0",
+    "body-parser": "^1.5",
     "compression": "^1.0",
     "express": "^4.7",
     "github": "^0.2",
