--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "algoliasearch": "^3.4",
     "async": "^1.0.0",
     "body-parser": "^1.5",
+    "colors": "^1.1.0",
     "compression": "^1.0",
     "express": "^4.7",
     "github": "^0.2",
