new tutorials coming up

--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "compression": "^1.0",
     "express": "^4.7",
     "github": "^0.2",
+    "highlight.js": "^8.6.0",
     "lodash": "^3.8",
+    "markdown": "^0.5.0",
+    "marked": "^0.3.3",
     "mustache": "^2.0",
     "newrelic": "^1.19.1",
     "throng": "^1.0.0",
