--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "compression": "^1.0",
     "express": "^4.7",
     "github": "^0.2",
+    "gravatar": "^1.1.1",
     "highlight.js": "^8.6.0",
     "lodash": "^3.8",
     "markdown": "^0.5.0",
