Remove twit in package dependencies.
Seems we did not use twitter/twit for a while

--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "marked": "^0.3.5",
     "mustache": "^2.0",
     "newrelic": "^1.19.1",
-    "throng": "^1.0.0",
-    "twit": "^1.1"
+    "throng": "^1.0.0"
   }
 }
