--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "colors": "^1.1.0",
     "compression": "^1.0",
     "express": "^4.7",
+    "git-url-parse": "^4.0.0",
     "github": "^0.2",
     "gravatar": "^1.1.1",
     "highlight.js": "^8.6.0",
