This commit replace the legacy `_.filter`-based search API by Algolia's search (includes fuzzy & multi-attributes search capabilities). Fix #74

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "startApi": "node apiServer.js",
     "reindex": "node reindex.js"
   },
   "repository": {
