--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "marked": "^0.3.5",
     "mustache": "^2.1",
     "newrelic": "^1.22.1",
-    "throng": "^1.0.1",
-    "lzma-native": "~0.3.9"
+    "throng": "^1.0.1"
   }
 }
