--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "github": "^0.2",
     "gravatar": "^1.3.0",
     "highlight.js": "^8.8.0",
+    "html-minifier": "^1.0.0",
     "lodash": "^3.10",
     "markdown": "^0.5.0",
     "marked": "^0.3.5",
