--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "tutorials"]
 	path = tutorials
 	url = git://github.com/cdnjs/tutorials.git
-[submodule "public/git_stats"]
-	path = public/git_stats
+[submodule "public/git_stats/cdnjs"]
+	path = public/git_stats/cdnjs
 	url = https://github.com/cdnjs/cdnjs-git_stats.git
-[submodule "public/gitstats"]
-	path = public/gitstats
+[submodule "public/gitstats/cdnjs"]
+	path = public/gitstats/cdnjs
 	url = https://github.com/cdnjs/cdnjs-gitstats.git
