--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "markdown": "^0.5.0",
     "marked": "^0.3.5",
     "mustache": "^2.2",
+    "newline-remove": "^1.0.2",
     "newrelic": "^1.25.1",
     "throng": "^1.0.1"
   }
