--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mustache": "^2.2",
     "newline-remove": "^1.0.2",
     "newrelic": "^1.25.1",
+    "replaceall": "^0.1.6",
     "throng": "^1.0.1"
   }
 }
