--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/cdnjs/new-website",
   "engines": {
-    "node": "^6.1.0"
+    "node": "6.2.0"
   },
   "dependencies": {
     "algoliasearch": "^3.11",
@@ -42,5 +42,15 @@
     "newrelic": "^1.25.1",
     "replaceall": "^0.1.6",
     "throng": "^1.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^2.0.0-rc.1",
+    "eslint-config-google": "^0.5.0",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-config-standard-jsx": "^1.2.0",
+    "eslint-config-standard-react": "^2.4.0",
+    "eslint-plugin-promise": "^1.3.1",
+    "eslint-plugin-react": "^5.1.1",
+    "eslint-plugin-standard": "^1.3.2"
   }
 }
