--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "newrelic": "^1.25.1",
     "pm2": "^1.1.3",
     "replaceall": "^0.1.6",
-    "throng": "^1.0.1"
+    "throng": "^1.0.1",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^2.0.0-rc.1",
@@ -52,6 +53,7 @@
     "eslint-config-standard-react": "^2.4.0",
     "eslint-plugin-promise": "^1.3.1",
     "eslint-plugin-react": "^5.1.1",
-    "eslint-plugin-standard": "^1.3.2"
+    "eslint-plugin-standard": "^1.3.2",
+    "forever": "^0.15.2"
   }
 }
